- setup local workflow
- setup packages
- setup scripts
- made some dummy html
- vite will server and watch with npm run start

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,10 @@
-// build test
-* {
-    display: none;
-}
+// util
+@use './util/reset';
+
+
+// common
+@use './common/terminal'
+
+// forms
+
+// responsive
