--- a/src/common/terminal.scss
+++ b/src/common/terminal.scss
@@ -2,6 +2,44 @@
 // This is for people looking to recreate the whole "scan line" etc effect.
 // But it can be left off for apps who want a "cleaner" "less cartoon" feel.
 
+@use '../util/colors';
+
+
+
 .terminal {
-    background: #000000;
-}  
+    background-color: #000;
+    color: colors.$color-green-one;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 0;
+    padding: 20px;
+    text-shadow: 0px 0px 10px rgba(0, 255, 0, 0.7);
+    position: relative;
+
+    &:after {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        background: repeating-linear-gradient( 0deg, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05) 1px, transparent 1px, transparent 2px ), linear-gradient( 90deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.05) 100% );
+        opacity: 0.2; 
+        animation: screenFlicker 0.1s infinite alternate;
+    }
+}
+
+@keyframes screenFlicker {
+    0% {
+        opacity: 0.15;
+    }
+
+    50% {
+        opacity: 0.2;
+    }
+
+    100% {
+        opacity: 0.25;
+    }
+}
