--- a/src/common/terminal.scss
+++ b/src/common/terminal.scss
@@ -7,7 +7,7 @@
 
 
 .terminal {
-    background-color: #000;
+    background-color: colors.$background-primary;
     color: colors.$color-green-one;
     font-family: "Courier New", Courier, monospace;
     font-size: 16px;
@@ -18,15 +18,16 @@
     position: relative;
 
     &:after {
+        content: '';
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
         pointer-events: none;
-        background: repeating-linear-gradient( 0deg, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05) 1px, transparent 1px, transparent 2px ), linear-gradient( 90deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.05) 100% );
-        opacity: 0.2; 
-        animation: screenFlicker 0.1s infinite alternate;
+        background: repeating-linear-gradient( 0deg, rgba(255, 255, 255, 0.01), rgba(255, 255, 255, 0.01) 1px, transparent 1px, transparent 2px ), linear-gradient( 0deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.05) 100% );
+        opacity: 0.1; 
+        animation: screenFlicker 0.3s infinite alternate;
     }
 }
 
@@ -38,7 +39,7 @@
     50% {
         opacity: 0.2;
     }
-
+     
     100% {
         opacity: 0.25;
     }
