--- a/src/common/terminal.scss
+++ b/src/common/terminal.scss
@@ -17,14 +17,22 @@
     text-shadow: 0px 0px 10px rgba(0, 255, 0, 0.7);
     position: relative;
 
+    &:before,
     &:after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+    }
+
+    &:before {
+        background-image: radial-gradient(rgb(138 255 141 / 8%) 0%, rgba(0, 0, 0, 0.4990371148) 80%);
+    }
+
+    &:after {
         background: repeating-linear-gradient( 0deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1) 1px, transparent 1px, transparent 2px ), linear-gradient( 0deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0.05) 100% );
         opacity: 0.1; 
         animation: screenFlicker 0.9s infinite alternate;
