--- a/src/forms/tables.scss
+++ b/src/forms/tables.scss
@@ -2,7 +2,7 @@
 
 
 table {
-  opacity: 0.9;
+  opacity: 0.8;
   border: 2px solid colors.$color-green-one;
   border-collapse: collapse;
   box-shadow: 0px 0px 4px 2px rgba(0, 255, 0, 0.2);
@@ -18,6 +18,7 @@ table {
     tr {
       transition: all 0.6s;
       td {
+        cursor: default;
         border-bottom: 1px solid rgba(0, 255, 0, 0.1);
         padding: 6px 12px;
       }
