--- a/src/common/setup.scss
+++ b/src/common/setup.scss
@@ -9,3 +9,36 @@ body {
   font-style: normal;
   text-shadow: 0px 0px 6px rgba(0, 255, 0, 0.3);
 }
+
+h1,h2,h3,h4,h5,h6,
+// Bootstrap uses class names
+.h1,.h2,.h3,.h4,.h5,.h6 {
+  font-family: "Oxanium",  Courier, monospace;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 700;
+  cursor: default;
+}
+
+p {
+  display: inline-block;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  font-family: "Oxanium",  Courier, monospace;
+  opacity: 0.6;
+  transition: all .2s;
+  transition-delay: .1s;
+  cursor: default;
+  &:hover {
+    transition: all .2s;
+    opacity: .85;
+  }
+
+  a {
+    text-decoration: underline;
+  }
+}
+
+a {
+  color: colors.$color-green-one;
+}
