--- a/src/common/terminal.scss
+++ b/src/common/terminal.scss
@@ -50,8 +50,8 @@
       }
       &:before {
         background-image: radial-gradient(rgb(138 255 141 / 8%) 0%, rgba(0, 0, 0, 0.4990371148) 80%);
+      }
     }
-
 }
 
 @keyframes screenFlicker {
