--- a/src/util/colors.scss
+++ b/src/util/colors.scss
@@ -1,6 +1,6 @@
 // Control colors here, if you want to change things etc etc
 
-$color-green-one:     #00FF00;
+$color-green-one:     #62ff62;
 $color-red-one:     #ff0000;
 $color-blue-one:     #3700ff;
 $background-primary:  #0c0c0c;
